...
 * palette, logo) here.
 */
const brand: Brand = {
  ...nativeConfig,

  pds: {
    name: 'Bluesky Social',
    serviceUrl: 'https://bsky.social',
    serviceDid: 'did:web:bsky.social',
    publicService: 'https://public.api.bsky.app',
    appview: 'https://api.bsky.app',
    appviewDid: 'did:web:api.bsky.app',
  },
...
